# paws

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  README.zh.md  install.fish  main.tex  registry.toml
.github/: PULL_REQUEST_TEMPLATE.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
Formula/: README.md  paws-games.rb  paws.rb
docs/: ARCHITECTURE.md  iterm2-setup.md  kaku-notes.md  tmux-setup.md
hooks/: claude-code-settings.json  codex-hooks.toml  paws-hook.sh
hooks/kiro/: paws-pause.sh  paws-signal.sh
iterm2/: paws.py
lua/: paws.lua
skills/paws-install/: SKILL.md
src/: earth_online.rs  lang.rs  main.rs
tmux/: paws-picker.sh  paws-toggle.sh  paws.conf
